--- a/package.json
+++ b/package.json
@@ -18,33 +18,34 @@
   },
   "homepage": "https://github.com/jiangting97/NextAReact#readme",
   "dependencies": {
-    "@types/react": "^16.4.18",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "awesome-typescript-loader": "^5.2.1",
     "classnames": "^2.2.6",
-    "enzyme": "^3.7.0",
+    "cookies-js": "^1.2.3",
     "express": "^4.16.4",
     "express-http-proxy": "^1.4.0",
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-ga": "^2.5.3",
-    "react-logger": "^1.1.0",
-    "react-persist": "^1.0.2",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.1.3",
+    "reselect": "^4.0.0",
+    "styled-components": "^4.0.2",
     "webpack-bundle-analyzer": "^3.0.3"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.14",
     "@types/jest": "^23.3.7",
-    "@types/next": "^7.0.3"
+    "@types/next": "^7.0.3",
+    "@types/react": "^16.4.18",
+    "@types/react-helmet": "^5.0.7",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.0.2",
+    "typescript": "^3.1.3"
   }
 }
