--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "target": "esnext",
+    "module": "esnext",
     "jsx": "preserve",
     "lib": ["dom", "es2017"],
-    "module": "esnext",
-    "moduleResolution": "node",
+    "allowJs": true,
     "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "preserveConstEnums": true,
     "removeComments": false,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
-    "target": "esnext"
+    "strict": true
   }
 }
